--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-    <string name="app_name">Joueurdugrenier</string>
-
+    <string name="app_name">Joueur du grenier</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
+    <string name="last_videos">Dernières vidéos</string>
+    <string name="all_videos">Toutes les vidéos</string>
+    <string name="papy_videos">Papy Grenier</string>
+    <string name="hs_videos">Hors séries</string>
 </resources>
