Api search calls * Simplify yt channel model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="api_key">AIzaSyA9lKLIH3Eqb3oZ3qQTCf7LkI_WePcvnyg</string>
     <string name="api_android_key">AIzaSyD4nrzFgdDFw4FtnkFLUjhe7kw3UDouEcI</string>
     <string name="channel_jdg_id">UC_yP2DpIgs5Y1uWC0T03Chw</string>
+    <string name="channel_bazar_id">UCCMxHHciWRBBouzk-PGzmtQ</string>
 </resources>
