--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,16 +7,22 @@
     <string name="channel_bazar">Bazar du grenier</string>
     <string name="app_desc">Fan App Joueur du Grenier</string>
     <string name="app_url">paocorp.com</string>
+    <string name="failed">Erreur dans le chargement de la vidéo</string>
 
     <string name="last_videos">Dernières vidéos</string>
     <string name="all_videos">Toutes les vidéos</string>
     <string name="papy">Papy Grenier</string>
     <string name="hs_videos">Hors Séries</string>
+    <string name="aventures">Aventures</string>
+    <string name="play">Let\'s Play !</string>
     <string name="hs_keyword">Spécial</string>
     <string name="papy_keyword">Papy</string>
+    <string name="aventures_keyword">aventures</string>
+    <string name="play_keyword">play</string>
 
     <string name="api_key">AIzaSyA9lKLIH3Eqb3oZ3qQTCf7LkI_WePcvnyg</string>
     <string name="api_android_key">AIzaSyD4nrzFgdDFw4FtnkFLUjhe7kw3UDouEcI</string>
     <string name="channel_jdg_id">UC_yP2DpIgs5Y1uWC0T03Chw</string>
     <string name="channel_bazar_id">UCCMxHHciWRBBouzk-PGzmtQ</string>
+    <string name="title_activity_player">PlayerActivity</string>
 </resources>
