Twitter timeline (en cours)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,15 @@
     <string name="channel_jdg_id">UC_yP2DpIgs5Y1uWC0T03Chw</string>
     <string name="channel_bazar_id">UCCMxHHciWRBBouzk-PGzmtQ</string>
     <string name="title_activity_player">PlayerActivity</string>
+    <string name="title_activity_twitter">Twitter JDG</string>
+
+    <string name="hello">Hello, </string>
+    <string name="login_instructions">Se connecter à Twitter</string>
+    <string name="btn_login">Se connecter à Twitter</string>
+
+    <!-- Twitter Configurations -->
+    <string name="twitter_callback">http://paocorp.com</string>
+    <string name="twitter_consumer_key">AKMOt4FJn3fPRwbsFL6L52X0j</string>
+    <string name="twitter_consumer_secret">KXUMBOQyDjL2iQaHPIYvnEG2nx25PjZPtGJBjaSyw7vFGeFhOf</string>
+    <string name="twitter_oauth_verifier">oauth_verifier</string>
 </resources>
