--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="app_url">paocorp.com</string>
     <string name="failed">Erreur dans le chargement de la vidéo</string>
     <string name="loading">Veuillez patienter svp...</string>
+    <string name="interstitial">ca-app-pub-2669557761715669/2015677235</string>
     <string name="offline">Vous devez disposer d\'une connexion internet pour utiliser cette application.</string>
 
     <string name="last_videos">Dernières vidéos</string>
@@ -22,8 +23,8 @@
     <string name="aventures_keyword">aventures</string>
     <string name="play_keyword">play</string>
 
-    <string name="api_key">AIzaSyCsW0XdL_p2jxd7tyuYW-mQ1sXVu5MBeIk</string>
-    <string name="api_key2">AIzaSyCC7WAqSep61Vjc_uZ8pHfu7F2lsRvI1lU</string>
+    <string name="api_key">AIzaSyCPT3DO51yUycDF3geQBiiMJpsEuqJx4PA</string>
+    <string name="api_key2">AIzaSyDsn0NM-sTvi4dE5FvO4rAnLIgrB1aENL4</string>
     <string name="api_android_key">AIzaSyD4nrzFgdDFw4FtnkFLUjhe7kw3UDouEcI</string>
     <string name="api_android_key2">AIzaSyCJMaC4i9xAomsWyMXDrU18gsyl0jN2HXY</string>
     <string name="channel_jdg_id">UC_yP2DpIgs5Y1uWC0T03Chw</string>
