--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="channel_jdg">Youtube Joueur du grenier</string>
     <string name="channel_bazar">Youtube Bazar du grenier</string>
-    <string name="app_desc">Fan App Joueur du Grenier</string>
+    <string name="app_desc">Fan App Joueur du grenier</string>
     <string name="app_url">paocorp.com</string>
     <string name="failed">Erreur dans le chargement de la vidéo</string>
     <string name="loading">Veuillez patienter svp...</string>
@@ -46,6 +46,8 @@
     <string name="site_jdg_url">http://www.joueurdugrenier.fr/</string>
     <string name="site_aventures">Site web Aventures</string>
     <string name="site_aventures_url">http://www.reussitecritique.fr/aventures/</string>
+    <string name="internet_title">Internet</string>
+    <string name="social_title">Internet</string>
 
     <!-- Twitter Configurations -->
     <string name="twitter_jdg_id">frederic_molas</string>
