--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="channel_jdg">Youtube Joueur du grenier</string>
     <string name="channel_bazar">Youtube Bazar du grenier</string>
+    <string name="news">News</string>
     <string name="app_desc">Fan App Joueur du grenier</string>
     <string name="app_url">paocorp.com</string>
     <string name="failed">Erreur dans le chargement de la vidéo</string>
@@ -31,6 +32,7 @@
     <string name="channel_bazar_id">UCCMxHHciWRBBouzk-PGzmtQ</string>
     <string name="title_activity_player">Lecteur Youtube</string>
     <string name="title_activity_bazar">Bazar du grenier</string>
+    <string name="feed">http://www.joueurdugrenier.fr/feed/</string>
 
     <string name="hello">Hello, </string>
     <string name="login_instructions">Se connecter à Twitter</string>
@@ -59,4 +61,5 @@
     <string name="twitter_consumer_key">AKMOt4FJn3fPRwbsFL6L52X0j</string>
     <string name="twitter_consumer_secret">KXUMBOQyDjL2iQaHPIYvnEG2nx25PjZPtGJBjaSyw7vFGeFhOf</string>
     <string name="twitter_oauth_verifier">oauth_verifier</string>
+    <string name="title_activity_news">News JDG</string>
 </resources>
