--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="site_aventures_url">http://www.reussitecritique.fr/aventures/</string>
     <string name="internet_title">Internet</string>
     <string name="social_title">Réseaux sociaux</string>
+    <string name="application">Application</string>
     <string name="rate_app">Noter cette application</string>
     <string name="store_url">https://play.google.com/store/apps/details?id=com.paocorp.joueurdugrenier</string>
     <string name="video_count">%1$s vidéos mises en ligne</string>
